:lipstick: :sparkles: : Slicing New UI & Implement Sidebar get user's playlists

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 {
-   REACT_API_URL=https://spotify23.p.rapidapi.com
-   apiKey=c6adcca4d9msh81294126cc105afp171e1ajsn1bce337fff20
+   VITE_API_URL=https://spotify23.p.rapidapi.com
+   VITE_API_KEY=c6adcca4d9msh81294126cc105afp171e1ajsn1bce337fff20
+   VITE_SPOTIFY_CLIENT_ID=a69cef6147c94e2190264654b883a124
+   VITE_SPOTIFY_CLIENT_SECRET=50afd6b2506d4902ad0ea46674d3331e
 }
