--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
